--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -5,12 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnimatedSplashscreen.MoveActivity">
-
-    <ImageView
-        android:id="@+id/move_anim"
-        android:layout_width="72dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_car" />
+    tools:context=".RoomDatabase.RoomActivity">
 
 </LinearLayout>
